# KickStartFiles

./: BSD 2-Clause  BSD 3-Clause  Boost Software  Creative Commons Zero v1.0 Universal  Eclipse Public License - v 2.0  GNU AFFERO GENERAL PUBLIC  GPLv3  compile_cmds.json
LICENCE/: Eclipse Public License - v 2.0
kotlin/: lang.json
langs/: index.json
langs/c/: .gitignore  CMakeLists.txt  build.ninja  build.py  build.sh  config.mk  lang.json  main.c  makefile
langs/cpp/: config.mk  lang.json  main.cpp  makefile
langs/go/: config.mk  lang.json  main.go  makefile
langs/kotlin/: Main.kt
langs/py/: .gitignore  lang.json  main.py  setup.py
langs/rust/: Cargo-old.toml  lang.json  main.rs
langs/swift/: lang.json  main.swift
libs/: index.json  template.json
libs/buffer/: buffer.json
libs/c/path-normalize/: path-normalize.json
libs/c/trim/: trim.json
